# ths

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  sandbox.rs
.github/workflows/: build.yml
aaa/: package.json
app/: README.md  tsconfig.json
snap/: snapcraft.yaml
src/: args.rs  dirs.rs  init.rs  inquirer.rs  main.rs  sample.rs  scaffold.rs
src/args/: mod.rs
src/commands/: config.rs  create.rs  init.rs  mod.rs
src/global/: dirs.rs  init.rs  scaffold.rs
src/globals/: dirs.rs  generate_readme.rs  init.rs  mod.rs  scaffold.rs  setup.rs
src/init/: mod.rs
