[package]
name = "stormz"
version = "0.1.0"
edition = "2021"
authors = ["Adeoye Adefemi <adefemiadeoye@yahoo.com>"]
description = "Command Line Application for scaffolding Node.js network applications."
repository = "https://github.com/opeolluwa/thunderstorm.rs"
license = "Apache-2.0"
keywords = ["cli", "node", "backend", "typescript", "javascript"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.6", features = ["derive"] }
dialoguer = { version = "0.5.1" }
billboard = "0.1"
figlet-rs = "0.1.3"
owo-colors = "3.4.0"
console = "0.10"


